# minilogue-access-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: capturing-fixtures.md  editor-integration.md  sysex-notes.md
minilogue/: Cargo.toml
minilogue-core/: Cargo.toml
minilogue-core/examples/: export_samples.rs  library_tour.rs  validate_lib.rs
minilogue-core/src/: cc.rs  codec.rs  function.rs  global.rs  lib.rs  mnlg.rs  pack.rs  params.rs  program.rs  schema.rs  sysex.rs  yaml.rs
minilogue-core/tests/: factory_library.rs  frame_round_trip.rs  global_round_trip.rs  mnlg_round_trip.rs  params_catalog.rs  program_round_trip.rs
minilogue-core/tests/fixtures/: README.md  current_program.syx  current_with_sequence.syx  factory_library.mnlglib  global.syx  program_000.syx  program_049.syx
minilogue-wasm/: Cargo.toml
minilogue-wasm/src/: lib.rs
minilogue/src/: main.rs  midi.rs
schemas/: minilogue-global.schema.json  minilogue-program.schema.json
tools/explore/: README.md  capture.py  diag.py  diff_param.py  grab_fixtures.py  identity.py  probe.py  unpack_inspect.py  write_probe.py
