[package]
name = "minilogue-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Korg minilogue SysEx + .mnlgprog codec (pure, no MIDI/file I/O)."

[features]
default = []
# Enabled by the wasm crate. Adds Tsify derives so types render as TS.
tsify = ["dep:tsify-next", "dep:wasm-bindgen"]
# Enabled by the CLI when emitting JSON Schema. Adds schemars derives.
schema = ["dep:schemars"]

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
zip = { workspace = true }
tsify-next = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1"
